# energy_audit

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: sponsor-access.yml
docs/: index.html
docs/samples/: sample_results.json
examples/: file_import.yaml  snmp_example.yaml
examples/sites/: site_east.yaml  site_west.yaml
src/energy_audit/: __init__.py  __main__.py
src/energy_audit/analysis/: __init__.py  cooling_analyzer.py  cost_projector.py  hardware_lifecycle.py  overprovisioning.py  renewable_advisor.py  workload_optimizer.py  zombie_detector.py
src/energy_audit/assessment/: __init__.py  bias.py  engine.py  history.py  models.py  questions.py  report.py
src/energy_audit/cli/: __init__.py  app.py
src/energy_audit/data/: __init__.py  generator.py  models.py  profiles.py
src/energy_audit/pro/: __init__.py  cli.py  config.py  fleet.py  fleet_renderer.py  mapper.py
src/energy_audit/pro/api/: __init__.py  models.py  routes.py  server.py
src/energy_audit/pro/collectors/: __init__.py  base.py  file_import.py  ipmi.py  redfish.py  snmp.py
src/energy_audit/pro/collectors/cloud/: __init__.py  aws.py  azure.py  gcp.py  power_models.py
src/energy_audit/pro/compliance/: __init__.py  eu_eed.py  iso_50001.py  sec_climate.py
src/energy_audit/recommendations/: __init__.py  engine.py  impact_calculator.py  templates.py
src/energy_audit/reporting/: __init__.py  ascii_charts.py  charts.py  executive_summary.py  pdf_report.py  terminal.py
src/energy_audit/scoring/: __init__.py  box1_present.py  box2_forget.py  box3_future.py  engine.py  thresholds.py  weights.py
tests/: conftest.py  test_assessment.py  test_cli.py  test_generator.py  test_models.py  test_profiles.py  test_recommendations.py  test_scoring.py
tests/test_pro/: test_pro.py
tests/test_pro/fixtures/: config.yaml  config_json.yaml  energy.csv  servers.csv  servers.json  snmp_sim.yaml
