[project]
name = "energy-audit"
version = "0.1.0"
description = "AI Data Center Energy Assessment Tool"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0"}
keywords = ["energy", "data-center", "audit", "pue", "sustainability", "green-computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "rich-click>=1.7",
    "pydantic>=2.5",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "reportlab>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/energy-audit"
Repository = "https://github.com/yourusername/energy-audit"
Issues = "https://github.com/yourusername/energy-audit/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]
pro = [
    "pyyaml>=6.0",
]
pro-snmp = [
    "pyyaml>=6.0",
    "pysnmp-lextudio>=6.0",
]
pro-ipmi = [
    "pyyaml>=6.0",
    "pyghmi>=1.5",
]
pro-redfish = [
    "pyyaml>=6.0",
    "httpx>=0.27",
]
pro-aws = [
    "pyyaml>=6.0",
    "boto3>=1.34",
]
pro-azure = [
    "pyyaml>=6.0",
    "azure-identity>=1.16",
    "azure-mgmt-compute>=31",
    "azure-monitor-query>=1.3",
]
pro-gcp = [
    "pyyaml>=6.0",
    "google-cloud-compute>=1.18",
    "google-cloud-monitoring>=2.21",
]
pro-api = [
    "pyyaml>=6.0",
    "fastapi>=0.109",
    "uvicorn>=0.27",
]
pro-all = [
    "pyyaml>=6.0",
    "pysnmp-lextudio>=6.0",
    "pyghmi>=1.5",
    "httpx>=0.27",
    "boto3>=1.34",
    "azure-identity>=1.16",
    "azure-mgmt-compute>=31",
    "azure-monitor-query>=1.3",
    "google-cloud-compute>=1.18",
    "google-cloud-monitoring>=2.21",
    "fastapi>=0.109",
    "uvicorn>=0.27",
]

[project.scripts]
energy-audit = "energy_audit.cli.app:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/energy_audit"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
